--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -74,7 +74,7 @@
     }
 
     @include for-desktop-up {
-      padding: 1.5rem 2rem;
+      padding: 1.5rem 1.7rem;
 
       &:focus-visible {
         outline: 2px solid $clr-grey-500;
